@@ -2277,11 +2277,45 @@ Text only</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkVBox" id="vbox32">
+              <widget class="GtkVBox" id="cursor_vbox">
                 <property name="visible">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                 <property name="border_width">12</property>
                 <property name="spacing">6</property>
+                <child>
+                  <widget class="GtkHBox" id="cursor_message_hbox">
+                    <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                    <property name="spacing">6</property>
+                    <property name="no_show_all">True</property>
+                    <child>
+                      <widget class="GtkImage" id="image3">
+                        <property name="visible">True</property>
+                        <property name="stock">gtk-dialog-info</property>
+                        <property name="icon_size">5</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkLabel" id="label5">
+                        <property name="width_request">280</property>
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Changing your cursor theme takes effect the next time you log in.</property>
+                        <property name="wrap">True</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                  </packing>
+                </child>
                 <child>
                   <widget class="GtkScrolledWindow" id="scrolledwindow8">
                     <property name="visible">True</property>
@@ -2302,12 +2336,12 @@ Text only</property>
                   </widget>
                 </child>
                 <child>
-                  <widget class="GtkHBox" id="hbox6">
+                  <widget class="GtkHBox" id="cursor_size_hbox">
                      <property name="visible">True</property>
                      <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="spacing">12</property>
                      <child>
-                      <widget class="GtkLabel" id="label5">
+                      <widget class="GtkLabel" id="cursor_size_label">
                         <property name="label" translatable="yes">Size:</property>
                       </widget>
                       <packing>
