@@ -1,5 +1,14 @@
 2007-07-25  Denis Washington <denisw@svn.gnome.org>
 
+	* gnome-theme-apply.c: (gnome_meta_theme_set):
+	* gnome-theme-info.c: (add_common_icon_theme_dir_monitor),
+	(gnome_theme_init):
+	* gnome-theme-info.h:
+	Re-add basic support for cursor themes for X servers without the Xcursor
+	extension, like the one on Solaris.
+
+2007-07-25  Denis Washington <denisw@svn.gnome.org>
+
 	* gnome-theme-info.h:
 	* gnome-theme-info.c: (gnome_theme_read_meta_theme):
 	* gnome-theme-apply.c: (gnome_meta_theme_set):
