@@ -1,3 +1,14 @@
+2007-07-26  Denis Washington <denisw@svn.gnome.org>
+
+	* data/appearance.glade:
+	* appearance-style.c: 
+	* appearance-themes.c: (theme_load_from_gconf), (cursor_theme_changed),
+	(prepare_list), (style_init):
+	* theme-save.c: (write_theme_to_disk):
+	* theme-util.h:
+	Re-add basic support for cursor themes for X servers without the Xcursor
+	extension, like the one on Solaris.
+
 2007-07-25  Thomas Wood  <thos@gnome.org>
 
 	Patch by:  Dennis Cranston <dennis_cranston@yahoo.com>
